23/10/2005 0.0.95
- libero.lua: mlex to identify the message list enhanced again
- yahoo.lua: Needed to deal with some scoping issues with local variables and how it relates to the updater. (russell822)
- yahoo.lua: Fixed the markasunread functionality which wasn't working. (russell822)
- es: *** empty log message *** (lisar314)
- yahoo.lua: Rewrite of the delete functionality (russell822)
- gmail.lua: Reaction to a change by gmail. (russell822)
- es: fixed ending tag typo (alessiofender)
- yahoo.lua: Added support for btinternet and talk21 (russell822)
- es, fr: fix (gareuselesinge)
- fr: changed html entities to corresponding characters (alessiofender)
- yahoo.lua: Fixed emptrytrash and emptybulk (russell822)
- es, fr: added kubuntu links (gareuselesinge)
- es, fr: added sarge link to download-linuxadded frank to aboutremoved "sf has broken statistics" (gareuselesinge)
- es: removed md5sumsfiles from es FAQ (gareuselesinge)
- es, fr: News splitted on more pages (alessiofender)
- mimer now optionally get the text_encoding (default iso-8859-1) so that utf8
webmails can be threated correctly
- added get_head_and_body method to browser
- fixed a bug in httpmail.lua involving non quoted & characters in XML data
- win32 version build against gnutls and not openssl
- fixed chroot jail creation (some libs missing, thanks Gabriele Giacone)
- asses sv debconf translation
- libero.lua: new mlex to better identify the message list 
- libero.lua: the plugin chooses from more web servers
- changed predefined link for FreePOPs RSS in aggregator
- fixed chroot jail creation (/etc/freepops/config.lua was not created)
- changed debian copyright with the new FSF address
- relaxed mlex checking to not call abort but fail more gracefully
- added patch for building on Solaris (thanks Alfredo Pena)
- changed manual to GPL license to allow it to stay in Debian/etch
- init script for debian is now lsb-compliant
- changed debian init script shell to bash
- fixed some typo in xml2table.lua